<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="70dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_view_register_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="48dp"
                android:contentDescription="@null"
                android:src="@drawable/photo_icon" />

            <TextView
                style="@style/Theme.Instagram.TextViewBase.Form"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:text="@string/photo_register_title"/>

            <TextView
                style="@style/Theme.Instagram.TextViewBase.Form"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:text="@string/photo_register_subtitle"/>

            <co.tiagoaguiar.course.instagram.commom.view.LoadingButton
                android:id="@+id/button_register_add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/add_photo"/>
            
            <Button
                android:id="@+id/button_register_skip_photo"
                style="@style/Theme.Instagram.Link"
                android:text="@string/jump"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>