<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.view.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="70dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_register_name"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_register_name"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_register_password"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_register_password"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_register_confirm_password"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_register_confirm_password"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <co.tiagoaguiar.course.instagram.login.view.LoadingButton
                android:id="@+id/button_name_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/continuee"/>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_darker"
        app:layout_constraintBottom_toTopOf="@+id/text_register_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_register_login"
        style="@style/Theme.Instagram.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white"
        android:padding="24dp"
        android:text="@string/already_has_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>