<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_insta_profile_thin"
                app:civ_border_color="@color/gray"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/gray_border"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_insta_add_profile"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp"
                app:civ_circle_background_color="@color/blue_enabled"
                app:layout_constraintBottom_toBottomOf="@id/image_profile_icon"
                app:layout_constraintEnd_toEndOf="@+id/image_profile_icon" />

            <TextView
                android:id="@+id/text_profile_posts_count"
                style="@style/Theme.Instagram.TextViewProfile"
                android:text="@string/zero"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_profile_followers_count"
                app:layout_constraintStart_toEndOf="@id/image_profile_icon"
                app:layout_constraintTop_toTopOf="@id/image_profile_icon" />

            <TextView
                android:id="@+id/text_profile_followers_count"
                style="@style/Theme.Instagram.TextViewProfile"
                android:text="@string/zero"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_profile_following_count"
                app:layout_constraintStart_toEndOf="@id/text_profile_posts_count"
                app:layout_constraintTop_toTopOf="@id/image_profile_icon" />

            <TextView
                android:id="@+id/text_profile_following_count"
                style="@style/Theme.Instagram.TextViewProfile"
                android:text="@string/zero"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_profile_followers_count"
                app:layout_constraintTop_toTopOf="@id/image_profile_icon" />


            <TextView
                android:id="@+id/text_profile_posts"
                style="@style/Theme.Instagram.TextViewProfile"
                android:text="@string/posts"
                app:layout_constraintEnd_toStartOf="@id/text_profile_followers_count"
                app:layout_constraintStart_toEndOf="@id/image_profile_icon"
                app:layout_constraintTop_toBottomOf="@id/text_profile_posts_count" />

            <TextView
                android:id="@+id/text_profile_followers"
                style="@style/Theme.Instagram.TextViewProfile"
                android:text="@string/followers"
                app:layout_constraintEnd_toStartOf="@id/text_profile_following_count"
                app:layout_constraintStart_toEndOf="@id/text_profile_posts"
                app:layout_constraintTop_toBottomOf="@id/text_profile_followers_count" />

            <TextView
                android:id="@+id/text_profile_following"
                style="@style/Theme.Instagram.TextViewProfile"
                android:text="@string/following"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_profile_followers_count"
                app:layout_constraintTop_toBottomOf="@id/text_profile_following_count" />

            <Button
                android:id="@+id/button_edit_profile"
                style="@style/Theme.Instagram.Button.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_profile_icon"
                app:layout_constraintTop_toBottomOf="@id/text_profile_posts" />

            <TextView
                android:id="@+id/text_profile_username"
                style="@style/Theme.Instagram.TextViewProfile"
                android:layout_marginTop="32dp"
                android:text="@string/username"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/image_profile_icon"
                app:layout_constraintTop_toBottomOf="@id/button_edit_profile" />

            <TextView
                android:id="@+id/text_profile_username_bio"
                style="@style/Theme.Instagram.TextViewProfile"
                android:layout_marginTop="4dp"
                android:ellipsize="marquee"
                android:maxLines="3"
                android:text="@string/bio"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="@id/button_edit_profile"
                app:layout_constraintStart_toStartOf="@id/image_profile_icon"
                app:layout_constraintTop_toBottomOf="@id/text_profile_username" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/nav_profile_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/top_bottom_border"
                app:labelVisibilityMode="unlabeled"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profile_username_bio"
                app:menu="@menu/menu_profile_bottom_nav" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nav_profile_tabs"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="130dp"
                tools:listitem="@layout/item_profile_grid" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    
    <ProgressBar
        android:id="@+id/progress_profile"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_profile_empty"
        android:text="@string/empty_list"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>