<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorOnPrimary"
    tools:context=".login.view.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_login_logo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="48dp"
                android:contentDescription="@null"
                android:src="@drawable/instagram_logo_black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_login_email"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_login_email"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_login_password"
                style="@style/Theme.Instagram.FormEditTextInput"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_login_password"
                    style="@style/Theme.Instagram.FormEditText"
                    android:autofillHints="@null"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray_text"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <co.tiagoaguiar.course.instagram.commom.view.LoadingButton
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/enter"/>

            <FrameLayout
                style="@style/Theme.Instagram.FormContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/gray_darker" />

                <TextView
                    style="@style/Theme.Instagram.TextViewBase"
                    android:layout_gravity="center"
                    android:background="?colorOnPrimary"
                    android:text="@string/or" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_darker"
        app:layout_constraintBottom_toTopOf="@+id/text_login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_login_register"
        style="@style/Theme.Instagram.TextViewBase"
        android:layout_width="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:textColor="?colorPrimary"
        android:background="?colorOnPrimary"
        android:padding="24dp"
        android:text="@string/does_not_have_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>